// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInputV2 > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-14 {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-16 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7"
            for=":rk:"
          >
            Test
          </label>
        </div>
      </div>
      <div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="true"
            class="emotion-10 emotion-11"
            data-size="large"
            id=":rk:"
            type="text"
            value="test"
          />
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              class="emotion-14 emotion-15"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0m-8-5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 10 5m0 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-16 emotion-7"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-14 {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: #22674e;
  fill: none;
}

.emotion-16 {
  color: #22674e;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7"
            for=":rg:"
          >
            Test
          </label>
        </div>
      </div>
      <div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
        >
          <input
            aria-invalid="false"
            class="emotion-10 emotion-11"
            data-size="large"
            id=":rg:"
            type="text"
            value="test"
          />
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              class="emotion-14 emotion-15"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-16 emotion-7"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7"
            for=":ra:"
          >
            Test
          </label>
        </div>
      </div>
      <div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-10 emotion-11"
            data-size="large"
            disabled=""
            id=":ra:"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7"
            for=":rd:"
          >
            Test
          </label>
        </div>
      </div>
      <div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-10 emotion-11"
            data-size="large"
            id=":rd:"
            readonly=""
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly with basic props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7"
            for=":r0:"
          >
            Test
          </label>
        </div>
      </div>
      <div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-10 emotion-11"
            data-size="large"
            id=":r0:"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
